# HackatonOrenburg2024_250K_deneg

./: .gitignore  README.md  docker-compose.yml  Презентация.pptx
cabinets/: README.md
events/: Dockerfile  README.md  go.mod  go.sum
feed/: README.md
frontend/: README.md  declarations.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
keys/: private_key.pem  public_key.pem
market/: Dockerfile  go.mod  go.sum
news/: .env-example  .env-local  Dockerfile  README.md  pyproject.toml
news/api/: middlewares.py  pagination.py  permissions.py  urls.py
news/api/news/: controllers.py  models.py  urls.py
news/api/news/migrations/: 0001_initial.py
news/api/posts/: apps.py  controllers.py  docs.py  models.py  serializers.py  services.py  urls.py
news/api/posts/migrations/: 0001_initial.py  0002_alter_likestopostmodel_user_id_and_more.py  0003_postmodel_created_at.py  0004_alter_postmodel_created_at.py  0005_hashtag_postmodel_hashtags.py  0006_commentmodel_alter_likestopostmodel_user_id_and_more.py
news/news/: settings.py  urls.py
news/scripts/: runserver.py
nginx/: 05-start.sh  Dockerfile  nginx.conf
postgres/: Dockerfile  init.sql
rating/: README.md
scripts/: cafedras.json  facults.json  script.py  students.json  universities.json  users.json
search_and_filter/: .env-example  .env-local  .gitignore  Dockerfile  Readme.md  config.py  main.py  pyproject.toml
search_and_filter/src/filter/: controller.py  service.py
search_and_filter/src/search/: controller.py  service.py
students/: Dockerfile  README.md  go.mod  (+1 more)
(+180 files in other folders)
